[package]
name = "network-error-logging"
version = "0.1.0"
authors = ["Patrick Hamann <patrick@fastly.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
ipnet = "2.1.0"
fastly = "^0.4.0"
chrono-wasi = { version = "^0.4.10", features = ["serde"] }
